# KalkulatorKonsFinal

./: CMakeLists.txt  README.md  historia.cpp  historia.h  kalkulator.cpp  kalkulator.h  main.cpp  menukonsolowe.cpp  menukonsolowe.h  operacja.cpp  operacja.h
